# Schach-Bot

./: CMakeLists.txt  Makefile  README.md  ai.c  ai.h  ai_evaluation.c  ai_evaluation.h  ai_generation.c  ai_generation.h  headers.h  init.c  init.h  main.c  main.h  tests.c  tests.h  util.c  util.h
Version1/: CMakeLists.txt  Makefile  ai_evaluation.c  ai_evaluation.h  ai_generation.c  ai_generation.h  board.c  board.h  headers.h  inspiration.txt  main.c  main.h  repetition_table.c  repetition_table.h  tests.c  transposition_table.c  transposition_table.h  util.c  util.h  zobrist_hashing.c  zobrist_hashing.h
Version1/additional_functionality/: precompute_bitboards.c  precompute_bitboards.h  precomputed_data.h
Version2/: CMakeLists.txt  evaluation.c  evaluation.h  generation.c  generation.h  main.c  main.h  moves_external.c  moves_external.h  pregenerate.c  pregenerate.h  setup.c  setup.h  structs.h  tests.c  tests.h  util_board.c  util_board.h
